# Life

./: CMakeLists.txt  README.md  Simulation.cpp  Simulation.h  logging.h  main.cpp
Src/: CMakeLists.txt  Simulation.cpp  Simulation.h  Time_Stamp.cpp  Time_Stamp.h  Visualise.cpp  Visualise.h  logging.c  logging.h  main.cpp
